fix: fix ship placement title alignment

--- a/src/style/_game.scss
+++ b/src/style/_game.scss
@@ -78,6 +78,8 @@
 
 .game-board__placement__title {
     font-size: 14px;
+    align-self: flex-start;
+    margin-left: 15px;
 }
 
 .game-board__placement__inventory {
